syntax = "proto3";

package utp.stock_service.v1;

message GetStocksRequest {
  repeated string offer_codes = 1;
  int32 offset = 2;
  int32 limit = 3 ;
}

message GetStocksResponse {
  enum StockKinds {
    SK_UNKNOWN = 0;
    SK_GROWTH = 1;
    SK_INCOME = 2;
    SK_VALUE = 3;
    SK_BLUE_CHIP = 4;
  }
  message Stock {
    int64 quantity = 1;
    string name = 2;
  }
  message Stocks {
    repeated Stock stocks = 1;
  }
  message Event {
    enum Code {
      C_OK = 0;
      C_ERROR = 1;
    }
    message Data {
      string value = 1;
    }
    message Error {
      string info = 1;
    }
    Code code = 1;
    oneof payload {
      Data data = 4;
      Error error = 100;
    }
  }
}

service StockService {
  rpc GetStocks(GetStocksRequest) returns (GetStocksResponse);
}
